# coordio

./: .flake8  .gitignore  .travis.yml  CHANGELOG.rst  CODEOWNERS  MANIFEST.in  README.md  build.py  pyproject.toml  pytest.ini  readthedocs.yml  setup.cfg  setup.py
.github/workflows/: release.yml  test.yml
cextern/: README.md  conv.cpp
cextern/dimage/: dimage.h  dobjects.c  dpeaks.c  dsigma.c  readme.txt  simplexy.c
cextern/sofa/: t_sofa_c.c
coordio/: __init__.py  conv.py  coordinate.py  defaults.py  fitData.py  guide.py  iers.py  positioner.py  site.py  sky.py  sofa_bindings.py  tangent.py  telescope.py  utils.py  wok.py  zernike.py
coordio/etc/: coordio.yml  fps_filledHex.txt  wokCoords.csv
docs/sphinx/: api.rst  conf.py  index.rst  intro.rst
include/: conv.h  coordio.h
python/coordio/: __init__.py  cli.py  conv.py  coordinate.py  defaults.py  exceptions.py  iers.py  site.py  sky.py  sofa_bindings.py  telescope.py  time.py  utils.py  wok.py
python/coordio/etc/: coordio.yml  focalPlaneModel.csv
scripts/: generatePositionerTable.py  guidesim.py
src/coordio/: __init__.py  astrometry.py  calibration.py  conv.py  coordinate.py  defaults.py  exceptions.py  extraction.py  guide.py  iers.py  positioner.py  sky.py  sofa_bindings.py  tangent.py  telescope.py  transforms.py  utils.py  wok.py  zernike.py  zhaoburge.py
src/coordio/etc/: astrometrynet.cfg
src/coordio/include/: coordio.h
tests/: __init__.py  conftest.py  plPlugMapP-12377.par  plPlugMapP-15017.par  test_conv.py  test_coordinate.py  test_coordio.py  test_fpScale.py  test_guide.py  test_iers.py  test_libcoordio.py  test_main.py  test_offset.py  test_plPlug.py  test_positioner.py  test_site.py  test_sky.py  test_sofa.py  test_tangent.py  test_tangentToPositioner2.py  test_telescope.py  test_time.py  test_utils.py  test_wok.py  test_wok2positioner.py  test_zern.py
tests/data/: finals2000A.data.csv
