[tool.poetry]
name = "sdss-coordio"
version = "1.0.0"
description = "Coordinate conversion for SDSS-V"
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>",
           "Conor Sayres <csayres@uw.edu>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/sdss/coordio"
repository = "https://github.com/sdss/coordio"
documentation = "https://sdss-coordio.readthedocs.org"
keywords = ["astronomy", "software"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "coordio" }
]
include = [
    {path = "coordio/etc/*"},
    {path = "cextern/**/*", format = "sdist"},
    {path = "LICENSE.md"},
    {path = "coordio/*.so", format = "wheel"}
]

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry.scripts]
coordio = "coordio.__main__:main"

[tool.poetry.dependencies]
python = "^3.7.1"
sdsstools = ">=0.1.0"
Sphinx = {version="^3.2.0", optional=true}
numpy = "^1.19.1"
pandas = "^1.2.1"
matplotlib = ">=3.1.1"
scipy = "^1.2.1"

[tool.poetry.dev-dependencies]
ipython = ">=7.11.0"
flake8 = ">=3.7.9"
doc8 = ">=0.8.0"
pytest = ">=5.2.2"
pytest-asyncio = ">=0.10.0"
pytest-cov = ">=2.8.1"
pytest-mock = ">=1.13.0"
pytest-sugar = ">=0.9.2"
isort = ">=4.3.21"
codecov = ">=2.0.15"
coverage = {version = "5.0", extras = ["toml"]}
ipdb = ">=0.12.3"
rstcheck = "^3.3.1"
astropy = "^4.0.1"

[tool.poetry.extras]
docs = ["Sphinx"]

[tool.isort]
line_length = 79
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "SDSS", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = "coordio"
known_sdss = ["sdsstools", "clu"]
balanced_wrapping = true
include_trailing_comma = false
lines_after_imports = 2
use_parentheses = true

[tool.pytest.ini_options]
addopts = "--cov coordio --cov-report html"

[tool.coverage.run]
branch = true
include = ["coordio/*"]
omit = [
    "*/__init__.py",
    "*/__main__.py"
]

[tool.coverage.report]
exclude_lines = [
    "def __repr__",
    "raise NotImplementedError"
]

[build-system]
# Because building doesn't work without it if using pip install -e .
requires = ["poetry-core>=1.0.0", "setuptools>=46.0.0"]
build-backend = "poetry.core.masonry.api"
