[metadata]
name = sdss-coordio
version = 1.1.0
author = Conor Sayres
author_email = csayres@uw.edu
description = Coordinate conversion for SDSS-V
url = https://github.com/sdss/coordio
project_urls =
	Repository = https://github.com/sdss/coordio
	Documentation = https://sdss-coordio.readthedocs.org
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, software, coordinates
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Science/Research
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Documentation :: Sphinx
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7
packages = find:
setup_requires =
	pybind11>=2.6.2
install_requires =
	sdsstools>=0.1.0
	numpy>=1.19.1
	pandas>=1.2.1
	matplotlib>=3.1.1
	scipy>=1.2.1
	pybind11>=2.6.2
	scikit-image>=0.17.2

[options.packages.find]
exclude =
	*.tests

[options.package_data]
coordio =
	etc/*
	include/*

[options.extras_require]
dev =
	flake8>=3.7.9
	doc8>=0.8.0
	pytest>=5.2.2
	pytest-asyncio>=0.10.0
	pytest-cov>=2.8.1
	pytest-mock>=1.13.0
	pytest-sugar>=0.9.2
	isort>=4.3.21
	codecov>=2.0.15
	coverage[toml]>=5.0
	ipdb>=0.12.3
	rstcheck>=3.3.1
	astropy>=4.0.1
	twine>=3.4.2
	wheel>=0.36.2
	sphinx>=4.0

[isort]
line_length = 79
sections =
	FUTURE
	STDLIB
	THIRDPARTY
	SDSS
	FIRSTPARTY
	LOCALFOLDER
default_section = THIRDPARTY
known_first_party =
	coordio
known_sdss =
	sdsstools
balanced_wrapping = true
include_trailing_comma = false
lines_after_imports = 2
use_parentheses = true

[flake8]
ignore =
    H101
    N
    W504
per-file-ignores =
    */__init__.py:W,F,E402
max-line-length = 99

[coverage:run]
branch = true

[coverage:report]
exclude_lines =
    "def __repr__"
    "raise NotImplementedError"
